# forge

./: .gitignore  .mcp.json  Cargo.toml  README.md  blocks_config.json  build.sh  debug_session.py  generate_config.sh  mcp_prompts_documentation.md  package-lock.json  package.json  project_config.json  test_complete.py  test_create_block.md  test_final.py  test_mcp.py  test_permissions.py  test_simple.py  test_terminal_spec.md  test_tool_execution.py
.claude/: settings.local.json
docs/: WordQuest.md  create_task_tool_docs.md  create_tasks_promp_mcp.md  create_terminal.md  features.md  idea.md  mcp-claude-response.md  mcp-prd-updated.md  mcp-prd.md  mcp_prompts_documentation.md  record_tasks.md  tasks.md
examples/: generate_config.rs  mcp_communication_flow.md  mcp_implementation_architecture.rs  mcp_integration_example.rs  pty_claude_example.rs  structured_prompt_example.rs
frontend/: blocks_config.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Git.jsx  Tools.jsx  index.css  main.jsx
frontend/src/components/: BlocksView.css  BlocksView.jsx  BlocksView.jsx.backup  ChatView.css  ChatView.jsx  DependencyTreeView.jsx  FlowView.css  FlowView.jsx  JiraConfigDialog.jsx  JiraSyncModal.jsx  LoggerView.css  LoggerView.jsx  LogsDialog.css  LogsDialog.jsx  ProjectView.css  ProjectView.jsx  PromptSettingsView.jsx  TaskDialog.css  TaskDialog.jsx  Terminal.css  Terminal.jsx  Terminal.module.css
frontend/src/hooks/: useTaskOrdering.js
frontend/src/utils/: taskSorting.js  (+1 more)
src/: block_config.rs  block_handlers.rs  chat_handlers.rs  claude_handlers.rs  claude_mcp_server.rs  enhanced_task_executor.rs  git_handlers.rs  jira_handlers.rs  jira_mapping.rs  lib.rs  llm_handler.rs  log_manager.rs  log_stream.rs  main.rs  models.rs  profession_prompts.rs  project_config.rs  project_handlers.rs  stream_capture.rs  task_executor.rs  task_executor_wrapper.rs  task_queue.rs  tools_handlers.rs
src/mcp/: context.rs  errors.rs  mod.rs  protocol.rs  server.rs  session.rs  state.rs  transport.rs
src/stores/: terminal-store.ts
tests/: mod.rs  simple_test.rs
(+12 files in other folders)
