[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
futures = "0.3.31"
tokio-stream = "0.1.17"
actix-web-actors = "4.2"
actix = "0.13"
awc = "3.2"
